@@ -1,0 +1,269 @@
+{
+  "0": {
+    "title": "0045 - User Input Confirmation Message",
+    "description": "",
+    "labelPlacement": "top_label",
+    "descriptionPlacement": "below",
+    "button": {
+      "type": "text",
+      "text": "Submit",
+      "imageUrl": ""
+    },
+    "fields": [{
+      "type": "radio",
+      "id": 1,
+      "label": "What colour is the sky?",
+      "adminLabel": "",
+      "isRequired": true,
+      "size": "medium",
+      "errorMessage": "",
+      "inputs": null,
+      "choices": [{
+        "text": "Red",
+        "value": "Red",
+        "isSelected": false,
+        "price": ""
+      }, {
+        "text": "Orange",
+        "value": "Orange",
+        "isSelected": false,
+        "price": ""
+      }, {
+        "text": "Yellow",
+        "value": "Yellow",
+        "isSelected": false,
+        "price": ""
+      }, {
+        "text": "Green",
+        "value": "Green",
+        "isSelected": false,
+        "price": ""
+      }, {
+        "text": "Blue",
+        "value": "Blue",
+        "isSelected": false,
+        "price": ""
+      }, {
+        "text": "Violet",
+        "value": "Violet",
+        "isSelected": false,
+        "price": ""
+      }],
+      "formId": 210,
+      "description": "",
+      "allowsPrepopulate": false,
+      "inputMask": false,
+      "inputMaskValue": "",
+      "inputType": "",
+      "labelPlacement": "",
+      "descriptionPlacement": "",
+      "subLabelPlacement": "",
+      "placeholder": "",
+      "cssClass": "",
+      "inputName": "",
+      "visibility": "visible",
+      "noDuplicates": false,
+      "defaultValue": "",
+      "conditionalLogic": "",
+      "productField": "",
+      "enableOtherChoice": "",
+      "enablePrice": "",
+      "multipleFiles": false,
+      "maxFiles": "",
+      "calculationFormula": "",
+      "calculationRounding": "",
+      "enableCalculation": "",
+      "disableQuantity": false,
+      "displayAllCategories": false,
+      "useRichTextEditor": false,
+      "fields": "",
+      "displayOnly": "",
+      "inputMaskIsCustom": "",
+      "maxLength": ""
+    }, {
+      "type": "textarea",
+      "id": 2,
+      "label": "How do you know this to be true?",
+      "adminLabel": "",
+      "isRequired": true,
+      "size": "medium",
+      "errorMessage": "",
+      "inputs": null,
+      "formId": 210,
+      "description": "",
+      "allowsPrepopulate": false,
+      "inputMask": false,
+      "inputMaskValue": "",
+      "inputType": "",
+      "labelPlacement": "",
+      "descriptionPlacement": "",
+      "subLabelPlacement": "",
+      "placeholder": "",
+      "cssClass": "",
+      "inputName": "",
+      "visibility": "visible",
+      "noDuplicates": false,
+      "defaultValue": "",
+      "choices": "",
+      "conditionalLogic": "",
+      "productField": "",
+      "form_id": "",
+      "useRichTextEditor": false,
+      "multipleFiles": false,
+      "maxFiles": "",
+      "calculationFormula": "",
+      "calculationRounding": "",
+      "enableCalculation": "",
+      "disableQuantity": false,
+      "displayAllCategories": false,
+      "maxLength": 500,
+      "fields": "",
+      "displayOnly": "",
+      "inputMaskIsCustom": ""
+    }],
+    "version": "2.4.16.3",
+    "id": 210,
+    "useCurrentUserAsAuthor": true,
+    "postContentTemplateEnabled": false,
+    "postTitleTemplateEnabled": false,
+    "postTitleTemplate": "",
+    "postContentTemplate": "",
+    "lastPageButton": null,
+    "pagination": null,
+    "firstPageCssClass": null,
+    "nextFieldId": 4,
+    "is_active": "1",
+    "date_created": "2020-06-22 17:05:17",
+    "is_trash": "0",
+    "confirmations": [{
+      "id": "5a2f26ada76d2",
+      "name": "Default Confirmation",
+      "isDefault": true,
+      "type": "message",
+      "message": "Thanks for contacting us! We will get in touch with you shortly.",
+      "url": "",
+      "pageId": "",
+      "queryString": ""
+    }],
+    "notifications": [{
+      "id": "5a2f26ad9d2f3",
+      "to": "{admin_email}",
+      "name": "Admin Notification",
+      "event": "form_submission",
+      "toType": "email",
+      "subject": "New submission from {form_title}",
+      "message": "{all_fields}"
+    }],
+    "feeds": {
+      "gravityflow": [{
+        "id": "801",
+        "form_id": "210",
+        "is_active": "1",
+        "feed_order": "0",
+        "meta": {
+          "step_name": "User Input",
+          "description": "",
+          "step_type": "user_input",
+          "step_highlight": "0",
+          "step_highlight_type": "color",
+          "step_highlight_color": "#dd3333",
+          "feed_condition_conditional_logic": "0",
+          "feed_condition_conditional_logic_object": [],
+          "scheduled": "0",
+          "schedule_type": "delay",
+          "schedule_date": "",
+          "schedule_delay_offset": "",
+          "schedule_delay_unit": "hours",
+          "schedule_date_field_offset": "0",
+          "schedule_date_field_offset_unit": "hours",
+          "schedule_date_field_before_after": "after",
+          "type": "select",
+          "assignees": ["role|administrator"],
+          "editable_fields": ["1", "2"],
+          "routing": "",
+          "assignee_policy": "any",
+          "highlight_editable_fields_enabled": "0",
+          "highlight_editable_fields_class": "green-triangle",
+          "instructionsEnable": "0",
+          "instructionsValue": "",
+          "display_fields_mode": "all_fields",
+          "default_status": "hidden",
+          "note_mode": "not_required",
+          "assignee_notification_enabled": "0",
+          "assignee_notification_from_name": "",
+          "assignee_notification_from_email": "{admin_email}",
+          "assignee_notification_reply_to": "",
+          "assignee_notification_cc": "",
+          "assignee_notification_bcc": "",
+          "assignee_notification_subject": "",
+          "assignee_notification_message": "A new entry requires your input.",
+          "assignee_notification_disable_autoformat": "0",
+          "resend_assignee_emailEnable": "0",
+          "resend_assignee_emailValue": "7",
+          "resend_assignee_email_repeatEnable": "0",
+          "resend_assignee_email_repeatValue": "3",
+          "in_progress_notification_enabled": "0",
+          "in_progress_notification_type": "select",
+          "in_progress_notification_routing": [{
+            "assignee": "user_id|1",
+            "fieldId": "0",
+            "operator": "is",
+            "value": "",
+            "type": ""
+          }],
+          "in_progress_notification_from_name": "",
+          "in_progress_notification_from_email": "{admin_email}",
+          "in_progress_notification_reply_to": "",
+          "in_progress_notification_cc": "",
+          "in_progress_notification_bcc": "",
+          "in_progress_notification_subject": "0023-in-progress-email-mt-assignees",
+          "in_progress_notification_message": "Assignees Merge Tag Test\r\n\r\n{assignees}",
+          "in_progress_notification_disable_autoformat": "0",
+          "complete_notification_enabled": "0",
+          "complete_notification_type": "select",
+          "complete_notification_routing": [{
+            "assignee": "user_id|1",
+            "fieldId": "0",
+            "operator": "is",
+            "value": "",
+            "type": ""
+          }],
+          "complete_notification_from_name": "",
+          "complete_notification_from_email": "{admin_email}",
+          "complete_notification_reply_to": "",
+          "complete_notification_cc": "",
+          "complete_notification_bcc": "",
+          "complete_notification_subject": "",
+          "complete_notification_message": "Entry {entry_id} has been updated completing the step.",
+          "complete_notification_disable_autoformat": "0",
+          "confirmation_messageEnable": "1",
+          "confirmation_messageValue": "The sky color is {What colour is the sky?:1}.\r\nReason: {How do you know this to be true?:2}.",
+          "due_date": "0",
+          "due_date_type": "delay",
+          "due_date_date": "",
+          "due_date_delay_offset": "",
+          "due_date_delay_unit": "hours",
+          "due_date_date_field_offset": "0",
+          "due_date_date_field_offset_unit": "hours",
+          "due_date_date_field_before_after": "after",
+          "due_date_highlight_type": "color",
+          "due_date_highlight_color": "#dd3333",
+          "expiration": "0",
+          "expiration_type": "delay",
+          "expiration_date": "",
+          "expiration_delay_offset": "",
+          "expiration_delay_unit": "hours",
+          "expiration_date_field_offset": "0",
+          "expiration_date_field_offset_unit": "hours",
+          "expiration_date_field_before_after": "after",
+          "status_expiration": "complete",
+          "destination_expired": "next",
+          "destination_complete": "next"
+        },
+        "addon_slug": "gravityflow",
+        "event_type": null
+      }]
+    }
+  },
+  "version": "2.4.16.9"
+}
